--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
     "name": "meterun-root",
     "version": "1.0.0",
+    "type": "module",
     "scripts": {
         "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
         "start": "npm run dev",
         "build": "cd client && npm install && npm run build",
         "install-all": "npm install && npm install --prefix client && npm install --prefix server",
+        "vercel-build": "npm install --prefix server && cd client && npm install && npm run build",
         "client": "npm run dev --prefix client",
         "server": "npm run dev --prefix server"
+    },
+    "dependencies": {
+        "axios": "^1.13.2",
+        "bcryptjs": "^3.0.3",
+        "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
+        "express": "^5.2.1",
+        "googleapis": "^170.0.0",
+        "jsonwebtoken": "^9.0.3",
+        "mongoose": "^9.1.3"
     },
     "devDependencies": {
         "concurrently": "^9.2.1"
