--- a/client/package.json
+++ b/client/package.json
@@ -11,32 +11,32 @@
     },
     "dependencies": {
         "@tanstack/react-query": "^5.90.16",
+        "@vitejs/plugin-react": "^5.1.1",
+        "autoprefixer": "^10.4.23",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.25.0",
         "leaflet": "^1.9.4",
         "lucide-react": "^0.562.0",
+        "postcss": "^8.5.6",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-leaflet": "^5.0.0",
         "react-router-dom": "^7.12.0",
         "recharts": "^3.6.0",
-        "tailwind-merge": "^3.4.0"
+        "tailwind-merge": "^3.4.0",
+        "tailwindcss": "^3.4.17",
+        "tailwindcss-animate": "^1.0.7",
+        "vite": "^7.2.4"
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
         "@types/react": "^19.2.5",
         "@types/react-dom": "^19.2.3",
-        "@vitejs/plugin-react": "^5.1.1",
-        "autoprefixer": "^10.4.23",
         "concurrently": "^9.2.1",
         "eslint": "^9.39.1",
         "eslint-plugin-react-hooks": "^7.0.1",
         "eslint-plugin-react-refresh": "^0.4.24",
-        "globals": "^16.5.0",
-        "postcss": "^8.5.6",
-        "tailwindcss": "^3.4.17",
-        "tailwindcss-animate": "^1.0.7",
-        "vite": "^7.2.4"
+        "globals": "^16.5.0"
     }
 }
